added experience html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -259,6 +259,7 @@
  <app-about></app-about>
  <app-academic></app-academic>
  <app-career-adjective></app-career-adjective>
+ <app-experience></app-experience>
 
  
 
