selfImage html added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -260,6 +260,7 @@
  <app-academic></app-academic>
  <app-career-adjective></app-career-adjective>
  <app-experience></app-experience>
+ <app-self-image></app-self-image>
 
  
 
