project html added to app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -261,7 +261,7 @@
  <app-career-adjective></app-career-adjective>
  <app-experience></app-experience>
  <app-self-image></app-self-image>
-
+<app-project></app-project>
  
 
 
