skill component html added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -262,7 +262,7 @@
  <app-experience></app-experience>
  <app-self-image></app-self-image>
 <app-project></app-project>
- 
+ <app-skill></app-skill>
 
 
 </div>
