--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,1 +1,121 @@
 <p>admin-panel works!</p>
+
+
+<div class="conainer-fluid">
+    <h1> Bootcamp Enrollment form</h1>
+<div class="alert alert-danger" *ngIf='errorMsg'>
+    {{errorMsg}}
+</div>
+
+    <form #userForm="ngForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!submitted">
+        userForm.value->{{userForm.value | json}}
+
+<hr/>
+
+userModel->{{userModel|json}}
+
+<hr/>
+
+userForm.form.valid->{{userForm.form.valid}}
+
+<!--div ngModelGroup="address">
+    <div class="form-group">
+        <label>Street</label>
+        <input type="text" class="form-control" name="street" ngModel>        
+    </div>
+    <div class="form-group">
+        <label>City</label>
+        <input type="text" class="form-control" name="city" ngModel>        
+    </div>
+    <div class="form-group">
+        <label>State</label>
+        <input type="text" class="form-control" name="state" ngModel>        
+    </div>
+    <div class="form-group">
+        <label>Postal Code</label>
+        <input type="text" class="form-control" name="postalcode" ngModel>        
+    </div>
+</div-->
+
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" required class="form-control" [(ngModel)]="userModel.name" [class.is-invalid]="name.invalid && name.touched" name="userName" #name="ngModel" >
+            <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small>
+        </div>
+
+        name.valid->{{name.valid}}
+<!--
+    {{name.className}} 
+form-control ng-untouched ng-pristine ng-valid
+
+-->
+        <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control" [(ngModel)]="userModel.email" name="email" >
+            
+        </div>
+
+        <div class="form-group">
+            <label>Phone</label>
+            <input type="tel" class="form-control" [(ngModel)]="userModel.phone" name="phone" #phone="ngModel" pattern="^\d{11}$" [class.is-invalid]="phone.invalid && phone.touched" required>
+            <!--small class="text-danger" [class.d-none]="phone.valid || phone.untouched">Phone Number is required and must be 11 digits</small-->
+<div *ngIf="phone.errors && (phone.invalid || phone.touched)">
+<small class="text-danger" *ngIf="phone.errors.required && phone.touched">Phone number is required</small>
+<small class="text-danger" *ngIf="phone.errors.pattern && phone.touched">Phone number must be 11 digits</small>
+</div>
+
+        </div>
+          
+        <div class="form-group">
+            <select class="custom-select" [(ngModel)]="userModel.topic" name="topic" required #topic="ngModel" [class.is-invalid]="topic.invalid && topic.touched">
+                <option value=""> I am interested in</option>
+                <option *ngFor="let topic of topics">{{topic}}</option> 
+            </select>
+            <small class="text-danger" [class.d-none]="topic.valid || topic.untouched">Please choose a topic</small>
+        </div>
+
+
+        <div class="form-group">
+            <select class="custom-select" [(ngModel)]="userModel.topic2" name="topic2"  #topic2="ngModel" [class.is-invalid]="topic2HasError && topic2.touched"
+            (blur)="validateTopic(topic2.value)" (change)="validateTopic(topic2.value)"  >
+                <option value="default"> I am interested in</option>
+                <option *ngFor="let topic of topics">{{topic}}</option> 
+            </select>
+            <small class="text-danger" [class.d-none]="!topic2HasError || topic2.untouched">Please choose a topic</small>
+            untouched {{topic2.untouched}}
+            <br>
+            topic2HasError {{topic2HasError}}
+        </div>
+
+        <div class="mb-3">
+            <label>Time Preference</label>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="timePreference" value="morning" [(ngModel)]="userModel.timePreference">
+                <label class="form-check-label">Morning (9AM - 12PM)</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="timePreference" value="evening" [(ngModel)]="userModel.timePreference">
+                <label class="form-check-label">Evening (5AM - 8PM)</label>
+            </div>
+        </div>
+
+         <div class="form-check mb-3">
+             <input class="form-check-input" type="checkbox" [(ngModel)]="userModel.subscribe" name="subscribe">
+             <label class="form-check-label">
+                 Send me promotional offers
+             </label>
+         </div>
+        
+
+         <button [disabled]="userForm.form.invalid ||topic2HasError" class="btn btn-primary" type="submit">Submit Form</button>
+
+    </form>
+</div>
+
+
+<hr>
+<hr>
+<hr>
+<h2 text-align="center">about admin starts here</h2>
+<app-about-admin></app-about-admin>
+
